fix: location were missing visual representation of hierarchy and custom icons (#22)
* location were missing visual representation of hierarch
* pinned localstack to 4.14.0 due to license change
* testcontainers localstack to use version 4.14.0 instead of latest
